--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div id="username">@diego.gms_</div>
     <div class="links">
       <a href="https://www.youtube.com/" target="_blank" class="link">Youtube</a>
-      <a href="https://www.instagram.com/" target="_blank" class="link">Twitter</a>
+      <a href="https://www.instagram.com/diego.gms_/" target="_blank" class="link">Twitter</a>
       <a href="https://www.twitch.tv/" target="_blank" class="link">Twitch</a>
-      <a href="https://github.com/" target="_blank" class="link">GitHub</a>  
+      <a href="https://github.com/Diego0761/" target="_blank" class="link">GitHub</a>  
     </div>
     <div class="icons">
       <a href="https://www.twitter.com/" target="_blank">
@@ -30,13 +30,13 @@
       <a href="https://www.twitch.tv/" target="_blank">
         <img src="./assets/twitch.svg" alt="">
       </a>
-      <a href="https://www.instagram.com/" target="_blank">
+      <a href="https://www.instagram.com/diego.gms_/" target="_blank">
         <img src="./assets/instagram.svg" alt="">
       </a>
       <a href="https://www.linkedin.com/" target="_blank">
         <img src="./assets/linkedin.svg" alt="">
       </a>
-      <a href="https://github.com/" target="_blank">
+      <a href="https://github.com/Diego0761/" target="_blank">
         <img src="./assets/github.svg" alt="">
       </a>
     </div>
