--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
       <a href="https://github.com/Diego0761/" target="_blank" class="link">GitHub</a>  
     </div>
     <div class="icons">
-      <a href="https://www.twitter.com/" target="_blank">
+      <a class="icon" href="https://www.twitter.com/" target="_blank">
         <img src="./assets/twitter.svg" alt="">
       </a>
-      <a href="https://www.twitch.tv/" target="_blank">
+      <a class="icon" href="https://www.twitch.tv/" target="_blank">
         <img src="./assets/twitch.svg" alt="">
       </a>
-      <a href="https://www.instagram.com/diego.gms_/" target="_blank">
+      <a class="icon" href="https://www.instagram.com/diego.gms_/" target="_blank">
         <img src="./assets/instagram.svg" alt="">
       </a>
-      <a href="https://www.linkedin.com/" target="_blank">
+      <a class="icon" href="https://www.linkedin.com/" target="_blank">
         <img src="./assets/linkedin.svg" alt="">
       </a>
-      <a href="https://github.com/Diego0761/" target="_blank">
+      <a class="icon" href="https://github.com/Diego0761/" target="_blank">
         <img src="./assets/github.svg" alt="">
       </a>
     </div>
