clicking on a link doesn't open a new tab anymore

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
     </div>
     <div id="username">@diego.gms_</div>
     <div class="links">
-      <a href="https://www.youtube.com/" target="_blank" class="link">Youtube</a>
-      <a href="https://www.instagram.com/diego.gms_/" target="_blank" class="link">Twitter</a>
-      <a href="https://www.twitch.tv/" target="_blank" class="link">Twitch</a>
-      <a href="https://github.com/Diego0761/" target="_blank" class="link">GitHub</a>  
+      <a href="https://www.youtube.com/" target="_self" class="link">Youtube</a>
+      <a href="https://www.instagram.com/diego.gms_/" target="_self" class="link">Twitter</a>
+      <a href="https://www.twitch.tv/" target="_self" class="link">Twitch</a>
+      <a href="https://github.com/Diego0761/" target="_self" class="link">GitHub</a>  
     </div>
     <div class="icons">
-      <a class="icon" href="https://www.twitter.com/" target="_blank">
+      <a class="icon" href="https://www.twitter.com/" target="_self">
         <img src="./assets/twitter.svg" alt="">
       </a>
-      <a class="icon" href="https://www.twitch.tv/" target="_blank">
+      <a class="icon" href="https://www.twitch.tv/" target="_self">
         <img src="./assets/twitch.svg" alt="">
       </a>
-      <a class="icon" href="https://www.instagram.com/diego.gms_/" target="_blank">
+      <a class="icon" href="https://www.instagram.com/diego.gms_/" target="_self">
         <img src="./assets/instagram.svg" alt="">
       </a>
-      <a class="icon" href="https://www.linkedin.com/" target="_blank">
+      <a class="icon" href="https://www.linkedin.com/" target="_self">
         <img src="./assets/linkedin.svg" alt="">
       </a>
-      <a class="icon" href="https://github.com/Diego0761/" target="_blank">
+      <a class="icon" href="https://github.com/Diego0761/" target="_self">
         <img src="./assets/github.svg" alt="">
       </a>
     </div>
