fixed instagram link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="username">@diego.gms_</div>
     <div class="links">
       <a href="https://www.youtube.com/" target="_self" class="link">Youtube</a>
-      <a href="https://www.instagram.com/diego.gms_/" target="_self" class="link">Twitter</a>
+      <a href="https://www.instagram.com/diego.gms_/" target="_self" class="link">Ìnstagram</a>
       <a href="https://www.twitch.tv/" target="_self" class="link">Twitch</a>
       <a href="https://github.com/Diego0761/" target="_self" class="link">GitHub</a>  
     </div>
