--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="avatar">
-      <img src="./assets/avatar.png" alt="" id="avatar-image">
+      <img src="./assets/avatar_1.png" alt="" id="avatar-image">
     </div>
     <div id="username">@diego.gms_</div>
     <div class="links">
