--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>@diego.gms_'s social tree</title>
+  <title>@diego social tree</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,12 +16,12 @@
     <div class="avatar">
       <img src="./assets/avatar_1.png" alt="" id="avatar-image">
     </div>
-    <div id="username">@diego.gms_</div>
+    <div id="username">@diego</div>
     <div class="links">
       <a href="https://www.youtube.com/" target="_self" class="link">Youtube</a>
-      <a href="https://www.instagram.com/diego.gms_/" target="_self" class="link">Instagram</a>
+      <a href="https://www.instagram.com/" target="_self" class="link">Instagram</a>
       <a href="https://www.twitch.tv/" target="_self" class="link">Twitch</a>
-      <a href="https://github.com/Diego0761/" target="_self" class="link">GitHub</a>  
+      <a href="https://github.com/" target="_self" class="link">GitHub</a>  
     </div>
     <div class="icons">
       <a class="icon" href="https://www.twitter.com/" target="_self">
@@ -30,13 +30,13 @@
       <a class="icon" href="https://www.twitch.tv/" target="_self">
         <img src="./assets/twitch.svg" alt="">
       </a>
-      <a class="icon" href="https://www.instagram.com/diego.gms_/" target="_self">
+      <a class="icon" href="https://www.instagram.com/" target="_self">
         <img src="./assets/instagram.svg" alt="">
       </a>
       <a class="icon" href="https://www.linkedin.com/" target="_self">
         <img src="./assets/linkedin.svg" alt="">
       </a>
-      <a class="icon" href="https://github.com/Diego0761/" target="_self">
+      <a class="icon" href="https://github.com/" target="_self">
         <img src="./assets/github.svg" alt="">
       </a>
     </div>
