--- a/index.html
+++ b/index.html
@@ -1,45 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>@diego social tree</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet"> 
-  <link rel="icon" href="./assets/favicon.png">
-</head>
-<body>
-  <div class="container">
-    <div class="avatar">
-      <img src="./assets/avatar_1.png" alt="" id="avatar-image">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@Diego0761 social tree</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="./assets/favicon.png" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="avatar">
+        <img src="./assets/avatar_1.png" alt="" id="avatar-image" />
+      </div>
+      <div id="username">@diego</div>
+      <div class="links">
+        <a href="https://www.youtube.com/" target="_self" class="link"
+          >Youtube</a
+        >
+
+        <a href="https://www.instagram.com/" target="_self" class="link">
+          Instagram
+        </a>
+
+        <a href="https://www.twitch.tv/" target="_self" class="link">
+          Twitch
+        </a>
+
+        <a href="https://github.com/" target="_self" class="link"> GitHub </a>
+      </div>
+
+      <div class="icons">
+        <a class="icon" href="https://www.twitter.com/" target="_self">
+          <img src="./assets/twitter.svg" alt="twitter" />
+        </a>
+        <a class="icon" href="https://www.twitch.tv/" target="_self">
+          <img src="./assets/twitch.svg" alt="twitch" />
+        </a>
+        <a class="icon" href="https://www.instagram.com/" target="_self">
+          <img src="./assets/instagram.svg" alt="instagram" />
+        </a>
+        <a class="icon" href="https://www.linkedin.com/" target="_self">
+          <img src="./assets/linkedin.svg" alt="linkedin" />
+        </a>
+        <a class="icon" href="https://github.com/" target="_self">
+          <img src="./assets/github.svg" alt="github" />
+        </a>
+      </div>
     </div>
-    <div id="username">@diego</div>
-    <div class="links">
-      <a href="https://www.youtube.com/" target="_self" class="link">Youtube</a>
-      <a href="https://www.instagram.com/" target="_self" class="link">Instagram</a>
-      <a href="https://www.twitch.tv/" target="_self" class="link">Twitch</a>
-      <a href="https://github.com/" target="_self" class="link">GitHub</a>  
-    </div>
-    <div class="icons">
-      <a class="icon" href="https://www.twitter.com/" target="_self">
-        <img src="./assets/twitter.svg" alt="">
-      </a>
-      <a class="icon" href="https://www.twitch.tv/" target="_self">
-        <img src="./assets/twitch.svg" alt="">
-      </a>
-      <a class="icon" href="https://www.instagram.com/" target="_self">
-        <img src="./assets/instagram.svg" alt="">
-      </a>
-      <a class="icon" href="https://www.linkedin.com/" target="_self">
-        <img src="./assets/linkedin.svg" alt="">
-      </a>
-      <a class="icon" href="https://github.com/" target="_self">
-        <img src="./assets/github.svg" alt="">
-      </a>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
